# attestable-builds

./: .env.template  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  walkthrough.md
.github/workflows/: python.yml  rust.yml  system.yml
common/: Cargo.toml
common/src/: lib.rs  messages.rs  protocol.rs
enclave-client/: Cargo.toml
enclave-client/src/: attestation.rs  main.rs  runc.rs  runner_manager.rs
enclave-container/: .gitignore  Dockerfile  README.md
enclave-container/content/: entry.sh  run.sh  setup.sh
enclave-wet-container/: Dockerfile  README.md
enclave-wet-container/content/: setup.sh
evaluation/: .gitignore  analysis_v2.ipynb  generate_scenario_full.py  latest.csv  main.py  preprocess_data.py  requirements.txt
evaluation/package-selection/: dependency-crawler.sh  selection.ods  unreproducible-packages.csv
evaluation/scenario_full/: scenario.csv
evaluation/scenario_full_big/: scenario.csv
evaluation/scenario_full_big_artifact-eval/: scenario.csv
evaluation/scenario_full_new/: scenario.csv
evaluation/scenario_full_new_artifact-eval/: scenario.csv
evaluation/scenario_full_one_round/: scenario.csv
evaluation/scenario_smoke_test/: README.md  scenario.csv
evaluation/scenario_smoke_test_big/: README.md  scenario.csv
evaluation/scenario_smoke_test_new/: scenario.csv
evaluation/scenario_test/: scenario.csv
evaluation/scripts/: checks.sh  setup-env.sh
evaluation/src/: github.py  runner.py  scenario_parser.py
evaluation/test/: test_scenario_parser.py
formal-verification/: README.md  attestablebuilds.spthy
github-runner/: .gitignore
github-runner/hooks/: attestation.sh  log.sh  pre_hook.sh
github-runner/simulated/: .gitignore  config.sh  run.sh
host-server/: Cargo.toml
host-server/src/: lib.rs  log_publishing_service.rs  main.rs  webhook_service.rs  webhook_types.rs
host-server/src/backend/: local.rs  mod.rs  nitro.rs  shared.rs
personality/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
personality/src/: .env-template  dependencies  main.rs
personality/src/controllers/: admin_controller.rs  authentication_controller.rs  log_builder_controller.rs  log_controller.rs  mod.rs
personality/src/models/: log_entry.rs  log_root.rs  mod.rs  personality_config.rs  proof_model.rs  response_model.rs  token_model.rs  tree_model.rs  user.rs
sandbox-container/: Dockerfile  config.base.json  create_rootfs.sh
sandbox-container/content/: run.sh
scripts/: artifact-eval-setup.sh  aws-big-start-server.sh  aws-boost-storage.sh  aws-start-server.sh  aws-terminate-server.sh  benchmark-gzip.sh  forward-form-server.sh  nitro-log-loop.sh  prepare-action-runner-for-local.sh  setup-aws-install-packages.list  setup-aws-install-packages.sh  setup-aws-net-ns.sh  setup-aws-nitro-yaml.sh  setup-local-net-ns.sh  setup-runner-rust.sh  terminate-everything.sh  tidy.sh
verifier-client/: Cargo.toml  README.md
verifier-client/src/: attestation_verification_service.rs  log_verification_service.rs  main.rs  transparency_service.rs
verifier-client/src/models/: attestation_data.rs  inclusion_proof.rs  log_entry.rs  mod.rs
