[workspace]
members = ["common", "enclave-client", "host-server"]
exclude = ["personality", "verifier-client"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
axum-server = "0.7.1"
bincode = "1.3"
clap = { version = "4.5.20", features = ["derive"] }
chrono = { version = "0.4.39" }
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11"
tokio = { version = "1.40.0", features = ["full"] }
tokio-vsock = "0.5.0"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
