[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-vsock = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = { workspace = true }
