[package]
name = "enclave-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
clap = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-vsock = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3.30"
serde_json = "1.0.132"
bincode = "1.3.3"
serde_bytes = "0.11.15"
base64 = "0.22.1"

[dependencies.nsm-driver]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

[dependencies.nsm-io]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"
