[package]
name = "host-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-server ={ workspace = true }
common = { path = "../common" }
serde = { workspace = true }
tokio = { workspace = true }
tokio-vsock = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
clap = { version = "4.5.20", features = ["derive", "env"] }
reqwest = { version = "0.12.9", features = ["json"] }
libc = "0.2.158"
