[package]
name = "personality"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
prost = "0.13.3"
prost-types = "0.13.3"
reqwest = "0.12.8"
rocket = { version = "0.5.1", features = ["json", "tls"] }
serde = "1.0.215"
sha2 = "0.10.8"
tokio = "1.41.1"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
reqwest = { version = "0.12.8", features = ["blocking"] }
