[package]
name = "verifier-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
dotenv = "0.15.0"
hex = "0.4.3"
openssl = "0.10.72"
reqwest = { version = "0.12.9", features = ["json"] }
rustls = "0.23.26"
rustls-pki-types = "1.11.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webpki = "0.22.4"

[dependencies.nsm-io]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

[dependencies.aws-nitro-enclaves-cose]
git = "https://github.com/awslabs/aws-nitro-enclaves-cose"
rev = "6064f82"

